# pytransposer

./: CHANGELOG.md  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml
src/pytranspose/: abc.py  common.py  doremi.py  transposer.py
src/pytransposer/: abc.py  common.py  config.py  doremi.py  transposer.py
