[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pytransposer"
version = "0.0.1"
authors = [
  { name="bfrangi", email="bernat.frangi@gmail.com" },
]
description = "A python package for transposing chords from one key to another and changing between DO-RE-MI and A-B-C notations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bfrangi/transposer"
"Bug Tracker" = "https://github.com/bfrangi/transposer/issues"